--- a/index.html
+++ b/index.html
@@ -3,21 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SOS Alert</title>
+    <title>فـأذكروني</title>
     <meta name="author" content="SolomDev0 || Eslam Wael" />
-    <link rel="apple-touch-icon" href="./src/assets/logo_footer.svg" />
-    <link
-      rel="shortcut icon"
-      type="image/ico"
-      href="./src/assets/logo_footer.svg"
-    />
-    <link
-      rel="fluid-icon"
-      type="image/png"
-      href="./src/assets/logo_footer.svg"
-    />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/logo_footer.svg" />
-    <meta name="og:image" href="./src/assets/logo_footer.svg" />
+    <link rel="apple-touch-icon" href="./src/assets/logo.png" />
+    <link rel="shortcut icon" type="image/ico" href="./src/assets/logo.png" />
+    <link rel="fluid-icon" type="image/png" href="./src/assets/logo.png" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/logo.png" />
+    <meta name="og:image" href="./src/assets/logo.png" />
     <link
       rel="stylesheet"
       type="text/css"
